vlib/v/parser/tests/unexpected_token.out
vlib/v/parser/tests/unexpected_token.vv:2:10: error: unexpected token `?`
    1 | fn main() {
    2 |     println(?)
      |             ^
    3 | }
